updated abstract, intro, problem description and discussion (deep learning and topolgy secttions). Still to do is ecologic relevance, the methods sectio, the results section and adding some figures

--- a/paper/src/main.tex
+++ b/paper/src/main.tex
@@ -36,10 +36,10 @@ Inferring Network Topology from Chaotic Time Series
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-Significant interest has been shown in the ability of ecologic networks to generate chaotic dynamics: it has been shown that even simple ecologic models can generate  dynamics that neither reach an equilibrium nor a stable limit cycle, but oscillate around a strange attractor. The resulting chaos has proved challenging to analyze due to its sensitivity to initial conditions and lack of homogeneity. In this paper three machine learning classification models are used to infer the topology of ecologic networks that were found to produce chaotic dynamics. The classification accuracy of a Deep Neural Network (DNN), Convolutional Neural Network (CNN) and Convolutional - Long Short Term Memory Network (CNN-LSTM) are compared and a positive correlation between model complexity and classification accuracy was found with the  CNN-LSTM performing on average best, the CNN second best, and the DNN worst. 
+Signiﬁcant interest has been shown in the ability of ecologic networks to generate chaotic dynamics: it has been shown that simple ecologic models can generate dynamics that neither reach an equilibrium nor a stable limit cycle but oscillate around a strange attractor. As a result, the dynamics of ecologic networks has proved challenging to analyze using traditional ecologic techniques. Recently, machine learning has been shown to be quite effective in the areas of classification, regression and forecasting of time series, both chaotic and not. In this paper three different machine learning models are used to classify and regress time series resulting from ecologic models that have been found to exhibit chaotic behavior. Specifically, a Deep Neural Network (DNN), Convolutional Neural Network (CNN) and a Convolutional - Long Short-Term Memory Network (CNN-LSTM) are used to classify which ecologic network generated a given time series, and to regress three different topologic metrics (the connectance, characteristic path length, and links per species) of the ecologic network that generated that time series. In comparing these machine learning models, a positive correlation between model complexity and model performance was found, with the CNN-LSTM performing on average best, the CNN second best, and the DNN worst.
 \end{abstract}
 \begin{keywords}
-chaos theory, chaotic attractors, convolutional neural networks, deep neural networks, dynamical systems, ecology, food webs, long short term memory, machine learning, network topology, time series, sequence classification 
+chaos theory, chaotic attractors, convolutional neural networks, deep neural networks, dynamical systems, ecology, food webs, long short-term memory, machine learning, network topology, sequence classiﬁcation, regression, time series 
 \end{keywords}
 
 
@@ -53,9 +53,10 @@ chaos theory, chaotic attractors, convolutional neural networks, deep neural net
     
 	Despite the rising popularity of Machine Learning, its use in the field of ecology has been slow growing. The presence of chaos in ecology and the ability for Machine Learning to understand complicated dynamics exposes one use of Machine Learning in ecology and is the main motivation for the following report.
     
-	Below is a detailed description of one such application of the power Machine Learning in the analysis of chaotic dynamics originating from ecological systems. First, a dataset of population data is created from food web models which are known to show chaos. Each point in this dataset contains a chaotic population time series, and the topology of the food web that generated the time series. This data set is then split into multiple smaller datasets to allow comparison between subsets of the data. 
-    
-	The datasets created are then used to train three Machine Learning algorithms with the aim of classifying the population time series by the food web topology that governed the dynamics. The results are interpreted with respect to their importance in the fields of ecology and machine learning, and improvements to the models and datasets are discussed so that further research may be well directed.  
+    Below is a detailed description of one such application of the power Machine Learning in the analysis of chaotic dynamics originating from ecological systems. First, datasets of population data were created from food web models which are known to show chaos. Each point in these datasets contain are of the form \textit{(x,y)} with \textit{x} being chaotic population time series, and \textit{y} being a labelling related to the ecologic network that generated time series \textit{x}. Datasets labelled with topologic metrics are used for regression, whereas datasets with labels of which ecologic network generated a time series are used for classification. For the specific task of classification, the original dataset was split into smaller data-subsets to compare machine learning model performance between these subsets. 
+
+    These datasets are then used to train three machine learning algorithms with the aim of a) classifying the population time series by identifying the food web topology that generated a given time series and b) regressing the value of a topologic metric of the food web that generated a time series. The results are given, then interpreted with respect to their importance in the ﬁelds of deep learning, topology and ecology, and improvements to the models and datasets are discussed so that further research may be well directed.
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{RELATED WORK}
@@ -80,12 +81,10 @@ chaos theory, chaotic attractors, convolutional neural networks, deep neural net
   \subfloat[The YXC phase space]{\label{ref_label3}\includegraphics[width=0.5\textwidth]{yxc.png}}\\
   \caption{\label{ref_label_overall}3 phase space trajectories of a 5 species chain with parameters \textit{d\textsubscript{Z}} = 0.01, \textit{d\textsubscript{Y}} = 0.01, \textit{d\textsubscript{X}} = 0.01 and \textit{d\textsubscript{C}} = 0.11. The trajectories start with all species at 0.5, 0.500037 and 0.500075, respectively, and were evaluated for 220,000 time steps, omitting the first 60,000. Z represents the apex predator of the chain, Y is predated by Z, X is predated by Y, C is predated by X and P is predated by C.}
 \end{figure}
+    The goal of the research presented was to attempt to infer characteristics of the underlying food web topology of a system given a population single time series. Originally the aim was to generate the underlying topology after observing a time series, however it became clear early on that this approach was too broad. To narrow the scope the number of topologies considered was limited to eight different network structures and the task was redefined to a) classify the topology that generated a time series and b) regress a topologic metric of the topology that generated a time series. 
+    
+    Preexisting ecologic network topologies were used to generate chaotic time series that were stored in a datasets containing points of the form \textit{(X , Y)}, where \textit{X} is the time series of a single species and Y is either the food web topology that generated \textit{X}, or the a topologic metric of the food web topology that generated \textit{X}. To further understand the difference between topologies, the dataset containing labels corresponding to network topologies was relabeled and stored into a new data set of the form \textit{(X , Y’)}, where \textit{X} remains unchanged and \textit{Y} is the number of species in the topology that generated \textit{X}. From this dataset, three more datasets were constructed, each containing time series generated from topologies that all contain the same number of species. These sets were stored in the same format as the previously mentioned datasets. It is paramount to understand these datasets and their relation to one another. Because they may be somewhat confusing, a more rigorous description of the datasets is below.
 
-	The goal of the research presented was to attempt to infer characteristics of the underlying food web topology of a system given a population single time series. Originally the aim was to generate the underlying topology after observing a time series, however it became clear early on that this approach was too broad. To narrow the scope the number of topologies considered was limited to eight different network structures. 
-    
-    Using preexisting ecologic models these topologies were used to generate chaotic time series that were stored in a data set containing points of the form \textit{(X , Y)}, where \textit{X} is the time series of a single species and \textit{Y} is the food web topology that generated \textit{X}.
-    
-    To further understand the difference between topologies, this original data set was relabeled and stored into a new data set of the form \textit{(X , Y')}, where \textit{X} is the time series of a single species and \textit{Y} is the number of species in the topology that generated \textit{X}. Additionally, a data set was created for each class \textit{y} $\epsilon$ \textit{Y'}. These sets were stored in the same format as the previously mentioned datasets. A more rigorous description of the datasets is below. 
     
     After creating the datasets, three classification algorithms were trained on each data set, and the highest accuracy for each were recorded. The classification algorithms used represented a variety of approaches to classification: specifically these algorithms were a Deep Neural Network (DNN), Convolutional Neural Network (CNN), and a Convolutional - Long Short Term Memory Network (CNN-LSTM). 
     
@@ -222,7 +221,9 @@ chaos theory, chaotic attractors, convolutional neural networks, deep neural net
 The food web topologies and differential equations shown were found to exhibit chaotic dynamics for certain parameter settings. Figure 1 shows different visualizations of one phase space trajectory of the most chaotic network topology, the chain of length 5. The three phase space trajectories in Figure 1 have nearly identical initial conditions, and over the course of 220,000 time steps diverge showing the food chains sensitivity to initial conditions and chaotic tendencies.
 
 \subsection{Datasets}
-A total of 5 datasets were created. Of these five datasets four are subsets of the original data set, denoted \textit{D}. The relationship of these datasets to one another is shown in Figure 2. \textit{D} was created by holding all parameter values constant except for the mortality rates \textit{d\textsubscript{C\textsubscript{i}}}, \textit{d\textsubscript{Y}}, \textit{d\textsubscript{Y}}, and \textit{d\textsubscript{Z}}. The n-dimensional space of mortality rates was traversed (Table 2), evaluating the differential equations (1) through (5) 200,000 time steps for each parameter combination, and omitting the first 50,232 time steps to remove initial transient behaviour of the system. Following Fussman and Heber (Fussman \& Heber, 2002), the resulting time series of length 149769, denoted \textit{x}, was recorded only if every species in the network "survived". This was carried out by only recording time series for which all species populations were greater than the threshold value $\varepsilon$ = 10\textsuperscript{-9} at time \textit{t} = 200,000. 
+For the task of regression, 3 datasets were created. For these datasets, the X component of the dataset \textit{D} remained unchanged, but the labels were changed to be topologic metrics. Datasets \textit{D\textsubscript{C}},  \textit{D\textsubscript{CL}}, and  \textit{D\textsubscript{LPS}} were respectively labelled with the topologic metrics connectance, characteristic length, and links per species of the 8 different food webs. In order to compare the performance of machine learning models trained on different topologic metrics, each labelling was scaled so that it laid within a [0, 1] range. To understand why this is necessary imagine two topologic metrics for a given food web, one with value 10 and the other with value 100. If a machine learning model were to estimate the first metric at a value of 9, the second with a value of 90, the model would be 10\% off the mark for both metrics. However, measuring the error using an error function such as Mean Squared Error (MSE) would show an MSE of (10 - 9)\textsuperscript{2} = 1 for the first metric, and a value of (100 – 10)\textsuperscript{2} = 100 for the second. We eliminate this problem by normalized all labels to be in the range [0, 1]. 
+
+For the task of classification, a total of 5 datasets were created. Of these five datasets four are subsets of the original data set, denoted \textit{D}. The relationship of these datasets to one another is shown in Figure 2. \textit{D} was created by holding all parameter values constant except for the mortality rates \textit{d\textsubscript{C\textsubscript{i}}}, \textit{d\textsubscript{Y}}, \textit{d\textsubscript{Y}}, and \textit{d\textsubscript{Z}}. The n-dimensional space of mortality rates was traversed (Table 2), evaluating the differential equations (1) through (5) 200,000 time steps for each parameter combination, and omitting the first 50,232 time steps to remove initial transient behaviour of the system. Following Fussman and Heber (Fussman \& Heber, 2002), the resulting time series of length 149769, denoted \textit{x}, was recorded only if every species in the network "survived". This was carried out by only recording time series for which all species populations were greater than the threshold value $\varepsilon$ = 10\textsuperscript{-9} at time \textit{t} = 200,000. 
 
 \textit{D} thus has the form \textit{(\textbf{X}, \textbf{Y})}, where \textit{\textbf{X}} is a vector of time series and \textit{\textbf{Y}} is a vector of labels such that each \textit{x} $\epsilon$ \textit{\textbf{X}} was generated by evaluating equations (1) through (5) corresponding to topology \textit{y} $\epsilon$ \textit{\textbf{Y}}, where \textit{\textbf{Y}} contains the topologies in Table 1. From \textit{D}, four datasets were created. The first, \textit{D\textsubscript{N}}, is of the form \textit{(\textbf{X}\textsubscript{N}, \textbf{Y}\textsubscript{N})}, where \textit{\textbf{X}\textsubscript{N}} = \textit{\textbf{X}} and each \textit{\textbf{Y}\textsubscript{Ni}} $\epsilon$ \textit{\textbf{Y}\textsubscript{N}} is a class corresponding to the number of species in topology \textit{y} $\epsilon$ \textit{\textbf{Y}}. Since the topologies in Table 1 contain between 3 and 5 species, this means that \textit{D\textsubscript{N}} contains only 3 classes. 
 
@@ -338,6 +339,9 @@ where \textit{x\textsubscript{t}} represents the population of species \textit{x
 	The classification models used were implemented in Python, using existing TensorFlow packages for DNNs, CNNs, and LSTMs. For all the models parameters were initialized randomly and a Rectified Linear Unit (ReLu) activation function was used. For the networks containing convolutional layers same padding was used, and filters were initialized according to a random normal distribution with $\mu$ = 0 and $\sigma$ = 0.05. A learning rate of 0.001 was used for all algorithms. 
     
     During training care was taken to train all algorithms identically. All models were trained using a batch size of 50, and performance was evaluated on the withheld test set every 200 training steps. The classifiers were trained up to 2,000 training steps and the highest accuracy was recorded. The performance of the algorithms is presented in the following section. 
+    
+\subsection{Regression Models}
+    The machine learning models for the task of regression are simply modified versions of the machine learning models for classification. For the DNN regressor, a canned tensorflow DNN regressor was used. For the CNN and CNN-LSTM the softmax function just before the output layer was removed to preserve the raw output value.  For all regressors the evaluation metric was changed from Accuracy to Mean Square Error (MSE). 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{RESULTS}
@@ -364,49 +368,85 @@ where \textit{x\textsubscript{t}} represents the population of species \textit{x
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{DISCUSSION}
-	The results presented in the previous section are thought provoking as well as enlightening. An almost universal trend is seen where the complexity of the model directly correlates with its ability to classify chaotic time series into topologies that generated them. This will allow further research to focus efforts on models that are more successful at interpreting chaotic population data. 
-   
-   Figure 6 shows the time series of one species' population generated from the ecological models explained above. At first glance, this data appears to be somewhat cyclic, with similarly shaped spikes occurring at regular intervals. However, the astute observer will notice that the peak of each spike is slightly different and that the spacing between spikes is not uniform. This holds true for all spikes, as well as similarly shaped spikes. These observations provide an explanation for the increased accuracy in the CNN and CNN-LSTM. CNNs are known to be \textit{shift invariant}, meaning they can learn features in data that are shifted an arbitrary amount in a given sample (Norouzi et al., 2009). This property applies directly to the datasets supplied as the nonuniform spacing between spikes can be understood as random shifts in the time series. Alternatively, one can imagine that the CNN is learning features that correspond to unique spike shapes, disregarding the frequency at which these spikes appear, and using this distinct spike shape to classify time series.
-   
-   Because the CNN-LSTM is comprised partially of a CNN it must share the same benefits as a CNN. The increased performance in the CNN-LSTM can again be explained by known properties of LSTM cells. LSTMs are known to excel at problems that feature long term dependencies, or events which occur at unkown intervals (Lipton \& Berkowitz, 2015). Because of this, one can intuit that random shifts in spikes in a time series may cause a CNN to under perform in comparison to a CNN-LSTM due to the unknown separation between spike events. Since the CNN-LSTM is comprised of convolutional layers followed by an LSTM cell one can think of the classifier as first extracting features using convolutions, then addressing the random spacing between them by passing the resulting features to an LSTM cell. 
+	
+    The results presented in the previous section are thought provoking as well as enlightening. In both the tasks of regression and classification, a trend is seen where the complexity of the model directly correlates with its performance. This will allow further research to focus efforts on models that are more successful at interpreting chaotic population data. 
 
-		Special attention should be paid to the datasets \textit{D} and \textit{D\textsubscript{5}} which do \textit{not} show the more complex classifiers performing better. Unsurprisingly, \textit{D} remained the least classifiable of the datasets. This could be explained by the fact that this set contained the greatest amount of classes. Considering Table 3, it is seen that all classifiers perform significantly better than a baseline estimator, but reach approximately the same accuracy. Because of the minimal difference between performances, it is hypothesized that \textit{D} is not completely classifiable. This apparent similarity between chaotic dynamics of different topologies may be explained by looking strictly at the topologies themselves. Consider topology A1, the five species chain. Topologies B1 (the four species chain), and A2 (the three species chain) are subgraphs of A1: it may be possible that the chaotic dynamics created from A1 may also be created from B1 or A2. If this were true then those dynamics stem from multiple topologies would be unclassifiable. Similary, one can see that topology A2 is a subgraph of every other topology, potentially contributing to the classifiability of the data set. 
-        
-        The data set \textit{D\textit{5}} presents a different phenomenon. The accuracy of each algorithm was identical; furthermore the accuracy of each algorithm was exactly that of a baseline classifier. That is to say that each algorithm simply learned to guess the most common class in the data set \textit{D\textit{5}}. Table 4 shows the class distribution of each data set. From this one can see that the most common class in \textit{D\textit{5}} comprised 80\% of the data points. While this may be underwhelming in regards to the learning capabilites of the algorithms, it may be important in regards to the ecological models.  
-        
-        Fussman and Heber showed that topology A1 possessed the highest percentage of chaotic parameters of all topologies they tested. Unsurprisingly, the class representing 80\% of data set \textit{D\textit{5}} was none other than topology A1. The nonuniformity in the distribution of classes in \textit{D\textit{5}} matches the findings of Fussman and Heber and may be more useful than any fancy Machine Learning Algorithm. Because a 5 species chain is so chaotic, it may be useful to know that chaotic dynamics found in a five species system most likely come from a chain of five species. Furthermore, the inability of all algorithms to classify chaotic time series generated from topologies of five species with more success than a baseline classifier may indicate that the time series themselves are nearly identical. 
-        
-        datasets \textit{D} and \textit{D\textit{5}} are particularly helpful in defining future research in the topic of chaotic time series classification. Future work may include creating an analogue to \textit{D\textit{5}} which features a more even class distribution, or removing the topology A1 from the data set entirely to distunguish topologies of similar levels of chaos. 
-        
-        To test the similarity of time series generated by topologies, the visualization of attractors from these topologies would be extremely helpful. If attractors look similar it would provide evidence that \textit{D} is indeed impossible to classify perfectly. 
-        
-        Lastly, it is recommended that research be conducted using classification algorithms which are adept at learning from chaotic time series data. Further research into architectures using LSTM cells seems to be a logical direction to start in. Architectures such as Liquid State Machines (LSMs) or Echo State Networks (ESNs) have been shown to excel at predicting and classifying chaotic data and could be the focus of further experimentation (Li et al., 2012).
- 
-\begin{figure}
-{\label{ref_label1}\includegraphics[width=0.5\textwidth]{dataspikes.png}}
-   \caption{\label{ref_label_overall}Time series showing spikes at irregular intervals and magnitudes. Notice that even spikes of similar shape return in a slightly altered form. This type of series may be best understood by networks containing LSTM cells.}
+    In the task of regression, we see that not all topologic metrics are created equal: it appears that the Characteristic Path Length was the ‘hardest’ metric to regress, followed by Connectance, and finally Links per Species.
+    
+    In this discussion, we will use modern deep learning concepts and observations about the time series data to understand the difference in performance between the models. Following that we will discuss the topologic metrics used in regression to try to understand why certain metrics seemed ‘easier’ to regress. Finally, we will use the first two discussion sections to explore the ecological relevance of these findings. It is hoped that by building a multidisciplinary understanding, a larger audience will find the results relevant and the arguments will be stronger. 
+
+\subsection{Deep Learning}
+
+    The performance results of the three different machine learning models are consistent with known properties of these models. In the academic and commercial realms, different types of Artificial Neural Networks (ANNs) excel at different tasks: knowing which ANN performs the best is not only useful, but can expose underlying trends in the data that the model is using. Similarly, observations about the data can help inform which ANN(s) may be best for the task at hand. 
+
+    For example, CNNs are known to be shift invariant, meaning they can learn features in data that are shifted an arbitrary amount in each sample (Norouzi et al., 2009). CNNs excel at classifying images in which the subject (i.e. a car) may be shifted, rotated, or otherwise changed. A CNN typically overcomes these shifts by extracting common features of the data and using them to make a more informed decision. To classify an image of a car, the CNN may extract high level features like a tire, or a mirror and use the collection of features present to determine what the image is: if it has four wheels and two mirrors it is probably a car. 
+
+    \begin{figure}
+    {\label{ref_label1}\includegraphics[width=0.5\textwidth]{dataspikes.png}}
+        \caption{\label{ref_label_overall}Time series showing spikes at irregular intervals and magnitudes. Notice that even spikes of similar shape return in a slightly altered form. This type of series may be best understood by networks containing LSTM cells.}
+    \end{figure} 
+    \begin{table}
+        \caption{Class Distribution of datasets}
+        \setlength{\tabcolsep}{5mm} % separator between columns
+        \def\arraystretch{1.25} % vertical stretch factor
+        \centering
+        \begin{tabular}{|c|c|c|c|c|c|}
+	        \hline
+            & \textbf{\textit{D}} &  \textbf{\textit{D\textsubscript{N}}} &      \textbf{\textit{D\textsubscript{3}}} &  \textbf{\textit{D\textsubscript{4}}} &      \textbf{\textit{D\textsubscript{5}}}\\ \hline
+            \textbf{0} & 0.34 & 0.44 & 0.45 & 0.24 & 0.80\\ \hline
+            \textbf{1} & 0.34 & 0.45 & 0.55 & 0.76 & 0.04\\ \hline
+            \textbf{2} & 0.05 & 0.11 &  &  & 0.02\\ \hline
+            \textbf{3} & 0.06 &  &  &  & 0.14\\ \hline
+            \textbf{4} & 0.11 &  &  &  & \\ \hline
+            \textbf{5} & 0.03 &  &  &  & \\ \hline
+            \textbf{6} & 0.02 &  &  &  & \\ \hline
+            \textbf{7} & 0.05 &  &  &  & \\ \hline
+        \end{tabular}
+    \end{table}
+
+    If one see’s that a CNN is outperforming a DNN it is logical to ask “what aspects of the data are easier for the CNN?”. To answer this question, it is important to look at the data the CNN and DNN were trained and evaluated on.  Figure 6 shows the time series of one species’ population generated from the ecological models explained above. At first glance, this data appears to be somewhat cyclic, with similarly shaped spikes occurring at regular intervals. However, the astute observer will notice that the peak of each spike is slightly different and that the spacing between spikes is not uniform. There are two theories for why the CNN outperformed the DNN that relate the data used and the known properties of the CNN. Firstly, one can imagine that the CNN is learning features that correspond to unique spike shapes, disregarding the frequency at which these spikes appear, and using this distinct spike shape to classify time series. Second, the small irregularities in spike shape and location can be understood as a shift applied to some original spike form. Both theories provide an explanation for why the CNN would outperform the DNN using the data supplied to it. 
+
+    Likewise, the addition of an LSTM cell to a CNN to create the LSTM-CNN was inspired by known properties of LSTM networks. Because the CNN-LSTM is comprised partially of a CNN any change in performance cause by adding an LSTM cell would logically be caused by that LSTM cell. We see that the CNN-LSTM outperforms the CNN: the logical conclusion is that the LSTM cell helped the CNN. Again, the question “what aspects of the data are easier for the CNN-LSTM?” should be asked. 
+    
+    The increased performance in the CNN-LSTM can again be explained by known properties of LSTM cells and observations about the data. LSTMs are known to excel at problems that feature long term dependencies, or events which occur at unknown intervals (Lipton & Berkowitz, 2015). Because of this, one can intuit that random shifts of similarly shaped spikes in a time series may cause a CNN to underperform in comparison to a CNN-LSTM. Since the CNN-LSTM is comprised of convolutional layers followed by an LSTM cell one can think of the classifier as first extracting features (spike shapes) using convolutions, then addressing the random spacing between them by passing the resulting features to an LSTM cell. This understanding aligns with the theory that the CNN layers learn time series features in the form of spike shapes. The CNN learns spike shapes better than the DNN, but gets somewhat confused by the random intervals between them and therefor is aided by the addition of an LSTM cell. These observations about the data and the properties of different machine learning models provide an explanation for the increased accuracy in the CNN and CNN- LSTM. 
+
+    In the task of classification, special attention should be paid to the datasets \textit{D} and \textit{D\textsubscript{5}} which do not show the more complex classifiers performing better. Unsurprisingly, \textit{D} remained the least classifiable of the datasets. This could be explained by the fact that this set contained the greatest number of classes. Considering Table 3, it is seen that all classifiers perform significantly better than a baseline estimator, but reach approximately the same accuracy when trained and evaluated on dataset \textit{D}. Because of the minimal difference between performances, it is hypothesized that \textit{D} is not completely classifiable. This apparent similarity between chaotic dynamics of different topologies may be explained by looking strictly at the topologies themselves. Consider topology A1, the five-species chain. Topologies B1 (the four-species chain), and A2 (the three species chain) are sub-graphs of A1: it may be possible that the chaotic dynamics created from A1 may also be created from B1 or A2. If this were true then those dynamics stem from multiple topologies would be unclassifiable. Similarly, one can see that topology A2 is a sub-graph of every other topology, potentially contributing to the classifiability of the data set. 
+
+    The data set \textit{D\textsubscript{5}} presents a different phenomenon. The accuracy of each algorithm was identical; furthermore, the accuracy of each algorithm was exactly that of a baseline classifier. Essentially,  each algorithm simply learned to guess the most common class in the data set \textit{D\textsubscript{5}}. Table 4 shows the class distribution of each data set. From this one can see that the most common class in \textit{D\textsubscript{5}} comprised 80\% of the data points. While this may be underwhelming in regards to the learning capabilities of the algorithms, it may be important in regards to the ecological models. 
+
+    Fussman and Heber showed that topology A1 possessed the highest percentage of chaotic parameters of all topologies they tested. Unsurprisingly, the class representing 80\% of data set \textit{D\textsubscript{5}} was none other than topology A1. The non-uniformity in the distribution of classes in \textit{D\textsubscript{5}} matches the findings of Fussman and Heber and may be more useful than any fancy Machine Learning Algorithm. Because a 5-species chain is so chaotic, it may be useful to know that chaotic dynamics found in a five-species system most likely come from a chain of five species. Furthermore, the inability of all algorithms to classify chaotic time series generated from topologies of five species with more success than a baseline classifier may indicate that the time series themselves are nearly identical. 
+    
+    Datasets \textit{D} and \textit{D\textsubscript{5}} are particularly helpful in defining future research in the topic of chaotic time series classification. Future work may include creating an analogue to \textit{D\textsubscript{5}} which features a more even class distribution, or removing the topology A1 from the data set entirely to distinguish topologies of similar levels of chaos. 
+
+    To test the similarity of time series generated by topologies, the visualization of attractors from these topologies would be extremely helpful. If attractors look similar it would provide evidence that \textit{D} is indeed impossible to classify perfectly. 
+    
+    Lastly, it is recommended that research be conducted using classification algorithms which are adept at learning from chaotic time series data. Further research into architectures using LSTM cells seems to be a logical direction to start in. Architectures such as Liquid State Machines (LSMs) or Echo State Networks (ESNs) have been shown to excel at predicting and classifying chaotic data and could be the focus of further experimentation (Li et al., 2012). 
+
+\subsection{Topologic Metrics}
+
+    Not only was a trend in machine learning models performance shown, but a trend in which metrics resulted in the best performance was also seen. As stated above, all models performed the poorest (i.e. had the highest loss values) when regressing in terms of the Characteristic Path Length of a given topology. The results of the models on the other two metrics, the Connectance and Links per Species, were much more similar but Links per Species had the lowest loss in most scenarios. 
+
+    One way to gain insight into the usability of the three metrics is to simply visualize them. Figure 7 shows that even after normalization to the 0-1 range, the different metrics have different qualities. The most notable feature of the regression metrics is the ‘evenness’ of each metric. The Characteristic Path Length is the less ‘even’ of all the metrics. This ‘unevenness’ of the Characteristic Path Length may be one reason why the metric is harder to regress. To understand this, imagine that you are tasked with guessing the Characteristic Path Length associated with a time series. It seems risky to guess a value higher than 0.4 since the majority (6 of 8) of labels fall within 0 to 0.4. 
+
+    To calculate evenness of a system more concretely one can use the interquartile range (IQR). The IQR of the Characteristic Path Lengths of the topologies is 0.35, the IQR of the Connectances is 0.65 and is 0.59 for the Links per Species’ values. These values partially explain the difference in performance when regressing different topologic values. The lower IQR  for the Characteristic Path Length confirms that those values are much more unevenly grouped, and the similar IQR values for Connectance and Links per Species align with the roughly similar loss trends when training and evaluating on Connectance and Links per Species. 
+    
+    However, following this logic one would expect to see higher performance when training and evaluating on Connectance than when training and evaluating on Links per Species, which is contrary to the results presented. Looking at how each metric groups each corresponding topology along the number line may offer a hint as to why Links per Species proved to be a better metric to use. The Characteristic Path Length groups the topologies B2, B3, A4, A2 and B4 closely together. The Connectance has less distinct groups, but groups the three chain topologies A1, B2 and A2 together, as well as the topologies B2 and B3. The Links per Species similarly groups the chain topologies together, but groups them more closely together than Connectance. It also groups together topologies B2 and B4. 
+    
+    \begin{figure}
+    {\label{ref_label1}\includegraphics[width=0.5\textwidth]{characteristic_length_plot.png}}
+    {\label{ref_label2}\includegraphics[width=0.5\textwidth]{connectance_plot.png}}
+    {\label{ref_label3}\includegraphics[width=0.5\textwidth]{links_plot.png}}
+    \caption{\label{ref_label_overall}The values of the topologic metrics plotted on a number line. Characteristic path length is on top, then Connectance, then Links per Species. THIS IS TEMPORARY - TO BE REDONE. }
 \end{figure} 
 
-\begin{table}
-\caption{Class Distribution of datasets}
-\setlength{\tabcolsep}{5mm} % separator between columns
-\def\arraystretch{1.25} % vertical stretch factor
-\centering
+    The facts that certain topologies a) result in different performances and b) group the topologies differently implies that certain groupings of topologies are easier to regress than others. Furthermore, this implies that the groupings of topologies that are ‘easier’ to regress group the topologies such that each group contains topologies that generate time series that are similar to each other. For example, the fact that the ‘easier’ metrics Connectance and Links per Species metrics grouped the chain topologies together implies that the time series generated by these chains are similar – if the regressors saw a time series that corresponded to a chain topology, it was regressed into the area of the number line reserved for chain topologies. This contrasts a regressor trained and evaluated using the Characteristic Path Length which, finding a time series corresponding to a chain topology, would not have a convenient region to regress into. 
 
-  \begin{tabular}{|c|c|c|c|c|c|}
-	\hline
-     & \textbf{\textit{D}} &  \textbf{\textit{D\textsubscript{N}}} &  \textbf{\textit{D\textsubscript{3}}} &  \textbf{\textit{D\textsubscript{4}}} &  \textbf{\textit{D\textsubscript{5}}}\\ \hline
-   \textbf{0} & 0.34 & 0.44 & 0.45 & 0.24 & 0.80\\ \hline
-   \textbf{1} & 0.34 & 0.45 & 0.55 & 0.76 & 0.04\\ \hline
-   \textbf{2} & 0.05 & 0.11 &  &  & 0.02\\ \hline
-   \textbf{3} & 0.06 &  &  &  & 0.14\\ \hline
-   \textbf{4} & 0.11 &  &  &  & \\ \hline
-   \textbf{5} & 0.03 &  &  &  & \\ \hline
-   \textbf{6} & 0.02 &  &  &  & \\ \hline
-   \textbf{7} & 0.05 &  &  &  & \\ \hline
-  \end{tabular}
-\end{table}
+    This realization is interesting in the fact that it also implies that certain topologic metrics may reflect the generating properties of a system better than others. As previously mentioned, future work in comparing similarities in time series generated by these topologies would be immensely helpful.
 
+\subsection{Ecologic Relevance}
+
+    TODO
+    
 %\addtolength{\textheight}{-12cm}   % This command serves to balance the column lengths
                                   % on the last page of the document manually. It shortens
                                   % the textheight of the last page by a suitable amount.
